<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">2.4GDemo</string>
    <string name="action_settings">Settings</string>
    <string name="buad_rate">BaudRate：</string>
    <string name="serialport">port：</string>
    <string name="power">power：</string>
	<string name="open">open</string>
	<string name="close">close</string>
	<string name="hex_recv">HEX recv</string>
	<string name="hex_send">HEX send</string>
	<string name="send">send</string>
	<string name="clear">clear</string>
	<string name="Start">start</string>
	<string name="Stop">stop</string>
	<string name="Light1"></string>
	
	<string name="select_power">select power</string>

	<string-array name="filter_type">
		<item>红灯</item>
		<item>绿灯</item>
		<item>红绿灯交叉</item>
		<item>红绿灯交替</item>
	</string-array>

	<string-array name="filter_time">
		<item>10s</item>
		<item>30s</item>
		<item>60s</item>
		<item>5min</item>
	</string-array>

	<string-array name="com">
		<item>Com0</item>
		<item>Com13</item>
	</string-array>


	<string-array name="power">
		<item>RFID</item>
		<item>5V</item>
		<item>60s</item>
		<item>5min</item>
	</string-array>
</resources>
