<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/editTextInfo"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:lineSpacingExtra="4dp"
            android:layout_weight="4"
            android:gravity="top"
            android:inputType="none"
            android:background="@drawable/corners_background" >
        </EditText>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/FontStyle"
                android:text="@string/serialport" />

            <Spinner
                android:id="@+id/spinnerSerialport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/FontStyle"
                android:text="@string/buad_rate" />

            <Spinner
                android:id="@+id/spinnerBuadrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/FontStyle"
                android:text="@string/power" />

            <Spinner
                android:id="@+id/spinnerPower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />
            
            <Button 
                android:id="@+id/button_Power"
               android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="@string/select_power"/>

            <CheckBox
                android:id="@+id/checkBoxHexRecv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hex_recv" />

            <CheckBox
                android:id="@+id/checkBoxHexSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hex_send" />
            
            <Button
                android:id="@+id/buttonOpen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open" />



        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="horizontal" >

        <AutoCompleteTextView
            android:id="@+id/edit_id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:hint="输入需要点亮的标签的id号"
            android:background="@drawable/corners_background"
            android:layout_marginBottom="5dp"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"/>
    </LinearLayout>

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="620dp"/>

    <AutoCompleteTextView
        android:id="@+id/editTextSend"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="7"
        android:visibility="gone"
        android:background="@drawable/corners_background"
        android:layout_marginBottom="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="点亮的标签号："/>
        <TextView
            android:id="@+id/text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            />


        <Button
            android:id="@+id/buttonSend"
            android:layout_width="0dp"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/send" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/buttonStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Start" />

        <Button
            android:id="@+id/buttonlight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone"
            android:text="群体点亮" />

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear" />
    </LinearLayout>

</LinearLayout>